<resources>
    <string name="app_name">Bulletin Board</string>
    <string name="my_ads">Мои объявления</string>
    <string name="car_ads">Машины</string>
    <string name="pc_ads">Компьютеры</string>
    <string name="smartphone_ads">Смартфоны</string>
    <string name="dm_ads">Бытовая техника</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="accaunt">Аккаунт</string>

    <string name="email">Почта</string>
    <string name="password">Пароль</string>

    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_or_sign_up">Войти или зарегестрироваться</string>

    <!-- EditActivity_OPEN -->

    <string name="edit_ac_title">Название</string>
    <string name="edit_ac_price">Цена</string>
    <string name="edit_ac_discriptin">Описание</string>
    <string name="edit_ac_tel">Телефон</string>

    <string name="toggle_open">Открыть</string>
    <string name="toggle_close">Закрыть</string>

    <!-- EditActivity_DELETE -->
    <string name="delet_title">Удаление</string>
    <string name="delet_message">Вы действительно хотите удалить объявление?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="item_deleted">Картинка удалена</string>


</resources>